<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">CaymanAll</string>
    <string name="ADMOB_BANNER_UNIT_ID">BANNER_ID_HERE</string>
    <string name="facebook_app_id">437006663808590</string>
    <string name="wizard_page1">SELL QUICKLY, CHAT TO BUY\n</string>
    <string name="wizard_page2">LIST YOUR ITEM IN NO TIME\n</string>
    <string name="wizard_page3">PRIVATELY TALK TO SELLERS\n</string>
    <string name="home_tab_browse">Browse</string>
    <string name="home_tab_likes">Events</string>
    <string name="home_tab_activity">News</string>
    <string name="home_tab_account">Account</string>
    <string name="options_dots">•••</string>
    <string name="loading">Loading ...
    </string>
    <string name="did_you_graduate">Did you Graduate ?</string>
    <string name="diploma">Diploma</string>
    <string name="reason_for_leaving1">Reason for leaving</string>
    <string name="this_is_the_link_where_users_will_be_sent_when_they_click_on_your_banner_leave_blank_if_you_wish_users_to_only_view_your_banner">This is the link where users will be sent when they click on your banner leave blank if you wish users to only view your banner</string>
    <string name="small_location_icon">Small Location Icon</string>
    <string name="small_call_icon">Small Call Icon</string>
    <string name="small_website_icon">Small Website Icon</string>
    <string name="small_location_status_icon">Small Location Status Icon</string>
    <string name="no_review_found">No Review Found</string>
    <string name="website_icon">Website Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="call">CALL</string>
    <string name="website">WEBSITE</string>
    <string name="username">Username</string>
    <string name="call_permission_title">Call Permission</string>
    <string name="call_permission_message">Hi there! We can\'t call anyone without the call permission, could you please grant it?</string>
    <string name="no">No thanks</string>
    <string name="website_not_registered_string">Website not Registered</string>
    <string name="phone_number_not_registered_string">Phone Number not Registered</string>
    <string name="search_hint_caymanall">Search on CaymanAll...</string>
    <string name="sort_by">SORT BY</string>
    <string name="recent">Recent</string>
    <string name="category1">CATEGORY</string>
    <string name="subcategory">SUBCATEGORY</string>
    <string name="all">All</string>
    <string name="choose_category">Choose category</string>
    <string name="choose_subcategory">Choose Subcategory</string>
    <string name="message">Message</string>
    <string name="please_type_your_message_here">please type your message here.</string>
    <string name="starting_date">Starting Date*</string>
    <string name="select_category">Select Category</string>
    <string name="week_s_event_expires_automatically_after_1_week_of_this_starting_date">*Week’s Event expires automatically after 1 week of this starting date.</string>
    <string name="title_of_the_event">Title of the event</string>
    <string name="if_you_don_t_choose_a_location_your_current_one_will_be_set_by_default">*If you don\'t choose a location, your current one will be set by default</string>
    <string name="website_optional">Website (optional)</string>
    <string name="www_xxxxx_com">www.xxxxx.com</string>
    <string name="phone_optional">Phone (optional)</string>
    <string name="xxxxxxxxx">XXXXXXXXX</string>
    <string name="type_a_description_about_event">Type a description about event</string>
    <string name="add_video_optional">Add Video (optional)</string>
    <string name="title_of_the_news">Title of the news</string>
    <string name="type_a_description_about_news">Type a description about news</string>
    <string name="set_distance">Set distance</string>
    <string name="_50_miles_around_your_location">\u0020for50 miles around your location</string>
    <string name="type_a_location_and_hit_search">Type a location and hit search</string>
    <string name="change_photo">Change Photo</string>
    <string name="gender">Gender</string>
    <string name="website1">Website</string>
    <string name="delete_account">Delete Account</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="event_details">Event details</string>
    <string name="website3">Website</string>
    <string name="attending">Attending</string>
    <string name="your_info">Your Info</string>
    <string name="applications_sent">Applications Sent</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="move_and_zoom_to_set_location">Move and zoom to set location</string>
    <string name="applications">Applications</string>
    <string name="news_details">News details</string>
    <string name="comments">COMMENTS</string>
    <string name="dots">....</string>
    <string name="profile">Profile</string>
    <string name="gander">Gender:</string>
    <string name="buying_banners">Buying Banners</string>
    <string name="title_of_banner">Title of Banner</string>
    <string name="website4">Website</string>
    <string name="payment">Payment</string>
    <string name="paypal">Paypal</string>
    <string name="cash">Cash</string>
    <string name="back">Back</string>
    <string name="create_promotions">Create Promotions</string>
    <string name="add_image_required">Add image (required)</string>
    <string name="details1">Details</string>
    <string name="title_of_promotion">Title of Promotion</string>
    <string name="website5">Website</string>
    <string name="ex_http_mywebsite_com">ex: http://mywebsite.com</string>
    <string name="this_is_the_link_where_users_will_be_sent_when_they_click_on_your_promotion_leave_blank_if_you_wish_users_to_only_view_your_promotion">*This is the link where users will be sent, when they click on your promotion. Leave blank if you wish users to only view your promotion!</string>
    <string name="_30_usd_will_be_charged_n_promotions_will_be_displayed_for_30_days">*30 USD will be charged.   *Promotions will be displayed for 30 days.</string>
    <string name="save">Save</string>
    <string name="add_images">Add images</string>
    <string name="add_video">Add Video</string>
    <string name="nvideo">+ VIDEO</string>
    <string name="details">DETAILS</string>
    <string name="add_new_field">Add new field</string>
    <string name="title_of_the_item_you_re_selling">Title of the item you\'re selling</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="set_a_price_for_your_item">Set a price for your item</string>
    <string name="tags">Tags</string>
    <string name="eg_2_bedrooms_1_bathroom">eg 2 Bedrooms, 1 Bathroom</string>
    <string name="cv_required">CV Required</string>
    <string name="pending">Pending</string>
    <string name="sold">Sold</string>
    <string name="used">Used</string>
    <string name="choose_location_optional">Choose location (optional)*</string>
    <string name="if_you_don_t_choose_a_location_your_current_one_will_be_set_by_default1">*If you don\'t choose a location, your current one will be set by default</string>
    <string name="featured_ads">Featured Ads</string>
    <string name="unpaid">Unpaid</string>
    <string name="feature_your_ad_60_days_for_only_35">*Feature your Ad 60 days for only $35</string>
    <string name="description">Description</string>
    <string name="type_a_description_of_your_item">Type a description of your item</string>
    <string name="view_applications">View Applications</string>
    <string name="delete">Delete</string>
    <string name="subscribe_notification">Subscribe Notification</string>
    <string name="subscribe_categories">Subscribe Categories</string>
    <string name="sort_by1">Sort By</string>
    <string name="by_signing_up_you_agree_to_our_terms_of_service">By signing up you agree to our Terms of Service</string>
    <string name="sign_up_or_login_in_with_email">Sign up or Login in with Email</string>
    <string name="ad_details">Ad details</string>
    <string name="loading4">loading...</string>
    <string name="loading5">loading...</string>
    <string name="comments1">Comments</string>
    <string name="type_here">Type here...</string>
    <string name="create_ad">Create Ad</string>
    <string name="create_event">Create Event</string>
    <string name="create_banner">Create Banner</string>
    <string name="select_source">Select source</string>
    <string name="choose_the_way_source_to_upload_picture">Choose the way/source to upload picture</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="message3">message</string>
    <string name="select_option">Select Option</string>
    <string name="my_account">My account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_ads1">My Ads</string>
    <string name="my_activity">My Activity</string>
    <string name="view_received_applications">View Received Applications</string>
    <string name="view_sent_applications">View Sent Applications</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="logout">Logout</string>
    <string name="my_ads">MY ADS</string>
    <string name="activity">Activity</string>
    <string name="long_press_to_delete">Long press to delete</string>
    <string name="email1">Email</string>
    <string name="continuebutton">Continue</string>
    <string name="contact_us">Contact Us</string>
    <string name="_22">22</string>
    <string name="muhammad_asif">Muhammad Asif</string>
    <string name="if_this_application_leads_to_employment_i_understand_that_false_or_misleading_information_in_my_application_or_interview_may_result_in_my_release">If this application leads to employment, I understand that false or misleading information in my application or interview may result in my release.</string>
    <string name="i_certify_that_my_answers_are_true_and_completed_to_the_best_of_my_knowledge">I certify that my answers are true and completed to the best of my knowledge.</string>
    <string name="click_on_apply_to_apply_for_this_job_or_you_can_edit_your_information_if_you_wish">Click on apply to apply for this job or you can edit your information if you wish :)</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>
    <string name="events">Events</string>
    <string name="events_will_be_displayed_here">Events will be displayed here.</string>
    <string name="start_chat">Start Chat</string>
    <string name="post_a_comment">POST A COMMENT</string>
    <string name="apply_for_this_job">APPLY FOR THIS JOB</string>
    <string name="seller">SELLER</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="company_details">Company Details</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="supervisor">Supervisor</string>
    <string name="job_title">Job Title</string>
    <string name="starting_salary">Starting Salary ($)</string>
    <string name="ending_salary">Ending Salary ($)</string>
    <string name="responsibilities">Responsibilities</string>
    <string name="from_00_00_0000">From (00/00/0000)</string>
    <string name="to_00_00_0000">To (00/00/0000)</string>
    <string name="reason_for_leaving">Reason for Leaving</string>
    <string name="may_we_contact_your_previous_supervisor_for_a_reference">May we contact your previous supervisor for a reference?</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
</resources>