<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    app:cardCornerRadius="@dimen/_3sdp"
    app:cardElevation="@dimen/_3sdp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="35dp"
        android:paddingBottom="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/select_source"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:text="@string/choose_the_way_source_to_upload_picture"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dmp_camera_tv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/take_a_picture"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dmp_gallery_tv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/pick_from_gallery"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dmp_cancel_tv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/main_color"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>