<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBg"
    android:orientation="vertical"
    tools:context=".selledit.activities.SellEditItemActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_color">


        <TextView
            android:id="@+id/ase_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="start|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableStart="@drawable/back_ic"
            android:drawablePadding="@dimen/_5sdp"
            android:padding="13dp"
            android:src="@drawable/back_ic"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/ase_screen_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal|bold" />
    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_shape_bg"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/message"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:scrollbars="vertical"
                android:gravity="start|top"
                android:hint="@string/please_type_your_message_here"
                android:lines="6"
                android:maxLines="6"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/sendcontactusmesage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/fullnameTxt"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/colorPrimary"
            android:text="@string/send"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

    </LinearLayout>
</LinearLayout>
