<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="jobobj"
            type="woopy.com.juanmckenzie.caymanall.formsjobs.modules.Formobject" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayBg"
        android:focusableInTouchMode="true"
        tools:context=".landing.SignUp">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:cardCornerRadius="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">

                        <woopy.com.juanmckenzie.caymanall.views.TextViewC
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/company_details"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <woopy.com.juanmckenzie.caymanall.views.EditTextC
                            android:id="@+id/pename"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/name"
                            android:imeOptions="actionNext"
                            android:inputType="none"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.pename}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp" />


                        <EditText
                            android:id="@+id/pephone"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/phone"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.pephone}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp"
                            tools:ignore="TextFields" />


                        <EditText
                            android:id="@+id/peaddress"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/address"
                            android:imeOptions="actionNext"
                            android:inputType="none"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.peaddress}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp" />


                        <EditText
                            android:id="@+id/pesupervisor"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/supervisor"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.pesupervisor}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/pejobtittle"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/job_title"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.pejobtittle}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp" />


                        <EditText
                            android:id="@+id/pestartingsalery"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/starting_salary"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.pestartingsallery}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/peendingsalery"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/ending_salary"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.peendingsallery}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp" />


                        <EditText
                            android:id="@+id/peresponsibilities"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/responsibilities"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.peresponsibilities}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp" />

                        <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                            android:id="@+id/pefromdate"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/from_00_00_0000"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.pefromdate}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp" />

                        <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                            android:id="@+id/peenddate"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/to_00_00_0000"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.peenddate}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp"
                            tools:ignore="HardcodedText" />


                        <EditText
                            android:id="@+id/peleavingreason"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/reason_for_leaving"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="@{jobobj.pereasonforleaving}"
                            android:textAlignment="viewStart"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/may_we_contact_your_previous_supervisor_for_a_reference"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/_12sdp" />


                        <lib.kingja.switchbutton.SwitchMultiButton
                            android:id="@+id/question1form3"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="10dp"
                            android:padding="8dp"
                            app:selectedColor="@color/colorPrimary"
                            app:selectedTab="0"
                            app:strokeRadius="1dp"
                            app:strokeWidth="1dp"
                            app:switchTabs="@array/switch_tabs"
                            app:textSize="13sp" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/fullnameTxt"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/continuebutton"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:textStyle="normal|bold" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>